Fixed (hopefully) last border jumping bug on wider screens.

--- a/client/components/mn-box-list/style.less
+++ b/client/components/mn-box-list/style.less
@@ -1,11 +1,11 @@
 .mn-box-list {
   max-width: 860px;
 
-  margin: 15px;
+  padding: 30px;
   border: none;
 
   &.selected {
-    margin: 0px;
+    padding: 15px;
     border: 15px solid black;
   }
 }
