--- a/client/components/mn-box/style.less
+++ b/client/components/mn-box/style.less
@@ -1,19 +1,19 @@
 .mn-box > * {
-  margin: 5px;
+  padding: 5px;
   border: none;
 
   &.selected {
-    margin: 0px;
+    padding: 0px;
     border: 5px solid black;
   }
 
   &.last {
-    margin:0px;
+    padding:0px;
     border: 5px solid gold;
 
 //    TODO: Refactor.
     &.selected {
-      margin: 0px;
+      padding: 0px;
       border: 5px solid black;
     }
   }
