--- a/client/components/mn-content/style.less
+++ b/client/components/mn-content/style.less
@@ -3,10 +3,13 @@
   // TODO: Bundle the correct way. This should be done in mn-gulp.
   background-image: url('http://i40.tinypic.com/2ho9szs.gif');
 
+  padding: 10px;
   margin: 10px;
   border: none;
 
   &.selected {
+    max-width: 980px;
+    padding: 10px;
     margin: 0px;
     border: 10px solid black;
   }
